@@ -21,12 +21,12 @@ import uk.gov.hmcts.divorce.document.model.DivorceDocument;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.concurrent.atomic.AtomicInteger;
 
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
 import static org.springframework.util.CollectionUtils.isEmpty;
 import static uk.gov.hmcts.ccd.sdk.type.FieldType.Collection;
 
@@ -156,7 +156,7 @@ public class BulkActionCaseData {
         return bulkListCaseDetails
             .stream()
             .filter(lv -> !unprocessedCaseIds.contains(lv.getValue().getCaseReference().getCaseReference()))
-            .collect(toList());
+            .toList();
     }
 
     @JsonIgnore
@@ -174,13 +174,27 @@ public class BulkActionCaseData {
                     .value(c.getValue().getCaseReference())
                     .build()
             )
-            .collect(toList());
+            .toList();
     }
 
     @JsonIgnore
     public <T> List<T> fromListValueToList(final List<ListValue<T>> targetList) {
         return targetList.stream()
             .map(ListValue::getValue)
-            .collect(toList());
+            .toList();
+    }
+
+    @JsonIgnore
+    public List<String> getCaseReferences() {
+        if (bulkListCaseDetails == null) {
+            return Collections.emptyList();
+        }
+
+        return bulkListCaseDetails
+            .stream()
+            .map(ListValue::getValue)
+            .map(BulkListCaseDetails::getCaseReference)
+            .map(CaseLink::getCaseReference)
+            .toList();
     }
 }
