@@ -1,7 +1,7 @@
 package uk.gov.hmcts.divorce.bulkaction.service;
 
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.ccd.sdk.type.ListValue;
 import uk.gov.hmcts.divorce.bulkaction.data.BulkListCaseDetails;
@@ -9,16 +9,15 @@ import uk.gov.hmcts.divorce.bulkaction.service.CaseTriggerService.TriggerResult;
 import uk.gov.hmcts.divorce.divorcecase.task.CaseTask;
 import uk.gov.hmcts.divorce.idam.User;
 
+import java.util.ArrayList;
 import java.util.List;
-
-import static java.util.stream.Collectors.toList;
 
 @Service
 @Slf4j
+@RequiredArgsConstructor
 public class BulkTriggerService {
 
-    @Autowired
-    private CaseTriggerService caseTriggerService;
+    private final CaseTriggerService caseTriggerService;
 
     public List<ListValue<BulkListCaseDetails>> bulkTrigger(final List<ListValue<BulkListCaseDetails>> bulkListCaseDetails,
                                                             final String eventId,
@@ -28,10 +27,12 @@ public class BulkTriggerService {
 
         log.info("Processing bulk list case details for Event ID: {}", eventId);
 
-        return bulkListCaseDetails.parallelStream()
-            .map(listValueCaseDetails -> caseTriggerService.caseTrigger(listValueCaseDetails, eventId, caseTask, user, serviceAuth))
-            .filter(triggerResult -> !triggerResult.isProcessed())
-            .map(TriggerResult::getListValueBulkListCaseDetails)
-            .collect(toList());
+        return new ArrayList<>(
+            bulkListCaseDetails.parallelStream()
+                .map(listValueCaseDetails -> caseTriggerService.caseTrigger(listValueCaseDetails, eventId, caseTask, user, serviceAuth))
+                .filter(triggerResult -> !triggerResult.isProcessed())
+                .map(TriggerResult::getListValueBulkListCaseDetails)
+                .toList()
+        );
     }
 }
