@@ -12,7 +12,6 @@ import uk.gov.hmcts.divorce.divorcecase.model.access.DefaultAccess;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.springframework.util.CollectionUtils.isEmpty;
@@ -82,7 +81,8 @@ public class Jurisdiction {
     @CCD(
         label = "Legal connections",
         hint = "Tick all the reasons that apply:",
-        access = {DefaultAccess.class}
+        access = {DefaultAccess.class},
+        searchable = false
     )
     private Set<JurisdictionConnections> connections;
 
@@ -97,7 +97,7 @@ public class Jurisdiction {
                 validateJurisdictionConnectionI2(data),
                 validateJurisdictionConnectionJ(data)
 
-            ).filter(Objects::nonNull).collect(Collectors.toList());
+            ).filter(Objects::nonNull).toList();
         }
     }
 
