@@ -34,6 +34,7 @@ import uk.gov.hmcts.divorce.divorcecase.model.ApplicantPrayer;
 import uk.gov.hmcts.divorce.divorcecase.model.Application;
 import uk.gov.hmcts.divorce.divorcecase.model.ApplicationType;
 import uk.gov.hmcts.divorce.divorcecase.model.CaseData;
+import uk.gov.hmcts.divorce.divorcecase.model.CaseDocuments;
 import uk.gov.hmcts.divorce.divorcecase.model.CaseInvite;
 import uk.gov.hmcts.divorce.divorcecase.model.ConditionalOrder;
 import uk.gov.hmcts.divorce.divorcecase.model.ConditionalOrderCourt;
@@ -58,8 +59,18 @@ import uk.gov.hmcts.divorce.divorcecase.model.LanguagePreference;
 import uk.gov.hmcts.divorce.divorcecase.model.MarriageDetails;
 import uk.gov.hmcts.divorce.divorcecase.model.Payment;
 import uk.gov.hmcts.divorce.divorcecase.model.PaymentStatus;
+import uk.gov.hmcts.divorce.divorcecase.model.RequestForInformationJointParties;
+import uk.gov.hmcts.divorce.divorcecase.model.RequestForInformationList;
+import uk.gov.hmcts.divorce.divorcecase.model.RequestForInformationOfflineResponseDraft;
+import uk.gov.hmcts.divorce.divorcecase.model.RequestForInformationOfflineResponseJointParties;
+import uk.gov.hmcts.divorce.divorcecase.model.RequestForInformationOfflineResponseSoleParties;
+import uk.gov.hmcts.divorce.divorcecase.model.RequestForInformationResponse;
+import uk.gov.hmcts.divorce.divorcecase.model.RequestForInformationResponseDraft;
+import uk.gov.hmcts.divorce.divorcecase.model.RequestForInformationResponseParties;
+import uk.gov.hmcts.divorce.divorcecase.model.RequestForInformationSoleParties;
 import uk.gov.hmcts.divorce.divorcecase.model.Solicitor;
 import uk.gov.hmcts.divorce.divorcecase.model.SolicitorService;
+import uk.gov.hmcts.divorce.divorcecase.model.State;
 import uk.gov.hmcts.divorce.divorcecase.model.UserRole;
 import uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants;
 import uk.gov.hmcts.divorce.document.model.ConfidentialDivorceDocument;
@@ -72,6 +83,7 @@ import uk.gov.hmcts.divorce.solicitor.client.organisation.OrganisationContactInf
 import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 
+import java.time.Clock;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
@@ -81,13 +93,14 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static feign.Request.HttpMethod.GET;
 import static java.lang.String.format;
 import static java.lang.String.join;
 import static java.nio.charset.StandardCharsets.UTF_8;
+import static java.time.LocalDateTime.now;
 import static java.util.Collections.singletonList;
+import static org.apache.commons.collections4.CollectionUtils.emptyIfNull;
 import static org.apache.commons.lang3.StringUtils.EMPTY;
 import static org.apache.commons.lang3.StringUtils.isNotEmpty;
 import static uk.gov.hmcts.ccd.sdk.type.ScannedDocumentType.FORM;
@@ -95,10 +108,14 @@ import static uk.gov.hmcts.ccd.sdk.type.YesOrNo.NO;
 import static uk.gov.hmcts.ccd.sdk.type.YesOrNo.YES;
 import static uk.gov.hmcts.divorce.citizen.notification.ApplicationRemindApplicant2Notification.APPLICANT_2_SIGN_IN_DISSOLUTION_URL;
 import static uk.gov.hmcts.divorce.citizen.notification.ApplicationRemindApplicant2Notification.APPLICANT_2_SIGN_IN_DIVORCE_URL;
+import static uk.gov.hmcts.divorce.common.notification.InviteApplicantToCaseNotification.RESPONDENT_SIGN_IN_DISSOLUTION_URL;
+import static uk.gov.hmcts.divorce.common.notification.InviteApplicantToCaseNotification.RESPONDENT_SIGN_IN_DIVORCE_URL;
 import static uk.gov.hmcts.divorce.divorcecase.NoFaultDivorce.getCaseType;
 import static uk.gov.hmcts.divorce.divorcecase.model.ApplicantPrayer.DissolveDivorce.DISSOLVE_DIVORCE;
 import static uk.gov.hmcts.divorce.divorcecase.model.ApplicationType.JOINT_APPLICATION;
 import static uk.gov.hmcts.divorce.divorcecase.model.ApplicationType.SOLE_APPLICATION;
+import static uk.gov.hmcts.divorce.divorcecase.model.CaseDocuments.OfflineDocumentReceived.OTHER;
+import static uk.gov.hmcts.divorce.divorcecase.model.CaseDocuments.OfflineDocumentReceived.RFI_RESPONSE;
 import static uk.gov.hmcts.divorce.divorcecase.model.CaseDocuments.builder;
 import static uk.gov.hmcts.divorce.divorcecase.model.ConditionalOrderCourt.BURY_ST_EDMUNDS;
 import static uk.gov.hmcts.divorce.divorcecase.model.ContactDetailsType.PRIVATE;
@@ -108,11 +125,30 @@ import static uk.gov.hmcts.divorce.divorcecase.model.Gender.FEMALE;
 import static uk.gov.hmcts.divorce.divorcecase.model.Gender.MALE;
 import static uk.gov.hmcts.divorce.divorcecase.model.JurisdictionConnections.APP_1_APP_2_RESIDENT;
 import static uk.gov.hmcts.divorce.divorcecase.model.LanguagePreference.ENGLISH;
+import static uk.gov.hmcts.divorce.divorcecase.model.LanguagePreference.WELSH;
+import static uk.gov.hmcts.divorce.divorcecase.model.RequestForInformationJointParties.BOTH;
+import static uk.gov.hmcts.divorce.divorcecase.model.RequestForInformationResponseParties.APPLICANT1;
+import static uk.gov.hmcts.divorce.divorcecase.model.RequestForInformationResponseParties.APPLICANT1SOLICITOR;
+import static uk.gov.hmcts.divorce.divorcecase.model.RequestForInformationResponseParties.APPLICANT2;
+import static uk.gov.hmcts.divorce.divorcecase.model.RequestForInformationResponseParties.APPLICANT2SOLICITOR;
+import static uk.gov.hmcts.divorce.divorcecase.model.RequestForInformationSoleParties.APPLICANT;
+import static uk.gov.hmcts.divorce.divorcecase.model.ScannedGeneralOrderOrGeneratedGeneralOrder.GENERATED_GENERAL_ORDER;
+import static uk.gov.hmcts.divorce.divorcecase.model.ScannedGeneralOrderOrGeneratedGeneralOrder.SCANNED_GENERAL_ORDER;
 import static uk.gov.hmcts.divorce.divorcecase.model.ServiceMethod.COURT_SERVICE;
 import static uk.gov.hmcts.divorce.divorcecase.model.ServiceMethod.SOLICITOR_SERVICE;
+import static uk.gov.hmcts.divorce.divorcecase.model.State.InformationRequested;
 import static uk.gov.hmcts.divorce.divorcecase.model.SupplementaryCaseType.NA;
+import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.APPLICANT_1;
+import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.APPLICANT_1_CY;
+import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.APPLICANT_1_FIRST_NAME;
 import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.APPLICANT_1_FULL_NAME;
+import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.APPLICANT_1_LAST_NAME;
+import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.APPLICANT_2;
+import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.APPLICANT_2_CY;
 import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.APPLICANT_2_FULL_NAME;
+import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.APPLICANT_2_SOLICITOR_NAME;
+import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.APPLICANT_CY;
+import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.APPLICANT_OR_APPLICANT1;
 import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.CASE_REFERENCE;
 import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.CONTACT_DIVORCE_EMAIL;
 import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.CONTACT_EMAIL;
@@ -125,15 +161,23 @@ import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.DI
 import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.DIVORCE_AND_DISSOLUTION_HEADER_TEXT_CY;
 import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.ISSUE_DATE;
 import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.NOT_PROVIDED;
+import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.NOT_PROVIDED_CY;
+import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.NOT_REPRESENTED;
+import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.NOT_REPRESENTED_CY;
 import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.PHONE_AND_OPENING_TIMES;
 import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.PHONE_AND_OPENING_TIMES_TEXT;
 import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.PHONE_AND_OPENING_TIMES_TEXT_CY;
+import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.RESPONDENT;
+import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.RESPONDENT_CY;
+import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.RESPONDENT_OR_APPLICANT2;
 import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.SOLICITOR_ADDRESS;
 import static uk.gov.hmcts.divorce.document.content.DocmosisTemplateConstants.SOLICITOR_REFERENCE;
+import static uk.gov.hmcts.divorce.document.content.NoticeOfProceedingContent.APPLICANT_1_SOLICITOR_NAME;
 import static uk.gov.hmcts.divorce.document.model.DocumentType.APPLICATION;
 import static uk.gov.hmcts.divorce.document.model.DocumentType.CONDITIONAL_ORDER_GRANTED;
 import static uk.gov.hmcts.divorce.document.model.DocumentType.CONDITIONAL_ORDER_GRANTED_COVERSHEET_APP_1;
 import static uk.gov.hmcts.divorce.document.model.DocumentType.CONDITIONAL_ORDER_GRANTED_COVERSHEET_APP_2;
+import static uk.gov.hmcts.divorce.document.model.DocumentType.REQUEST_FOR_INFORMATION_RESPONSE_DOC;
 import static uk.gov.hmcts.divorce.notification.CommonContent.APPLICANT_NAME;
 import static uk.gov.hmcts.divorce.notification.CommonContent.APPLICATION_REFERENCE;
 import static uk.gov.hmcts.divorce.notification.CommonContent.CIVIL_PARTNER_JOINT;
@@ -148,6 +192,7 @@ import static uk.gov.hmcts.divorce.notification.CommonContent.JOINT_CONDITIONAL_
 import static uk.gov.hmcts.divorce.notification.CommonContent.LAST_NAME;
 import static uk.gov.hmcts.divorce.notification.CommonContent.PARTNER;
 import static uk.gov.hmcts.divorce.notification.CommonContent.RESPONDENT_NAME;
+import static uk.gov.hmcts.divorce.notification.CommonContent.SENT_TO_BOTH_APPLICANTS;
 import static uk.gov.hmcts.divorce.notification.CommonContent.SIGN_IN_DISSOLUTION_URL;
 import static uk.gov.hmcts.divorce.notification.CommonContent.SIGN_IN_DIVORCE_URL;
 import static uk.gov.hmcts.divorce.notification.CommonContent.SIGN_IN_URL;
@@ -156,6 +201,7 @@ import static uk.gov.hmcts.divorce.notification.CommonContent.WIFE_JOINT;
 import static uk.gov.hmcts.divorce.notification.FormatUtil.DATE_TIME_FORMATTER;
 import static uk.gov.hmcts.divorce.notification.FormatUtil.formatId;
 import static uk.gov.hmcts.divorce.systemupdate.service.task.GenerateCertificateOfEntitlementHelper.IS_JOINT;
+import static uk.gov.hmcts.divorce.testutil.ClockTestUtil.setMockClock;
 import static uk.gov.hmcts.divorce.testutil.TestConstants.APPLICANT_2_FIRST_NAME;
 import static uk.gov.hmcts.divorce.testutil.TestConstants.APPLICANT_2_LAST_NAME;
 import static uk.gov.hmcts.divorce.testutil.TestConstants.APPLICANT_2_SIGN_IN_DISSOLUTION_TEST_URL;
@@ -163,6 +209,8 @@ import static uk.gov.hmcts.divorce.testutil.TestConstants.APPLICANT_2_SIGN_IN_DI
 import static uk.gov.hmcts.divorce.testutil.TestConstants.FEE_CODE;
 import static uk.gov.hmcts.divorce.testutil.TestConstants.FORMATTED_TEST_CASE_ID;
 import static uk.gov.hmcts.divorce.testutil.TestConstants.ISSUE_FEE;
+import static uk.gov.hmcts.divorce.testutil.TestConstants.RESPONDENT_SIGN_IN_DISSOLUTION_TEST_URL;
+import static uk.gov.hmcts.divorce.testutil.TestConstants.RESPONDENT_SIGN_IN_DIVORCE_TEST_URL;
 import static uk.gov.hmcts.divorce.testutil.TestConstants.SIGN_IN_DISSOLUTION_TEST_URL;
 import static uk.gov.hmcts.divorce.testutil.TestConstants.SIGN_IN_DIVORCE_TEST_URL;
 import static uk.gov.hmcts.divorce.testutil.TestConstants.TEST_APP2_FIRST_NAME;
@@ -175,9 +223,12 @@ import static uk.gov.hmcts.divorce.testutil.TestConstants.TEST_LAST_NAME;
 import static uk.gov.hmcts.divorce.testutil.TestConstants.TEST_MIDDLE_NAME;
 import static uk.gov.hmcts.divorce.testutil.TestConstants.TEST_ORG_ID;
 import static uk.gov.hmcts.divorce.testutil.TestConstants.TEST_ORG_NAME;
+import static uk.gov.hmcts.divorce.testutil.TestConstants.TEST_OTHER_EMAIL;
+import static uk.gov.hmcts.divorce.testutil.TestConstants.TEST_OTHER_NAME;
 import static uk.gov.hmcts.divorce.testutil.TestConstants.TEST_SOLICITOR_EMAIL;
 import static uk.gov.hmcts.divorce.testutil.TestConstants.TEST_SOLICITOR_FIRM_NAME;
 import static uk.gov.hmcts.divorce.testutil.TestConstants.TEST_SOLICITOR_NAME;
+import static uk.gov.hmcts.divorce.testutil.TestConstants.TEST_TEXT;
 import static uk.gov.hmcts.divorce.testutil.TestConstants.TEST_USER_EMAIL;
 
 public class TestDataHelper {
@@ -214,13 +265,51 @@ public class TestDataHelper {
             .build();
     }
 
-    public static Applicant getApplicantWithAddress() {
+    public static Applicant getApplicantWithAddress(Gender gender) {
         return Applicant.builder()
             .firstName(TEST_FIRST_NAME)
             .middleName(TEST_MIDDLE_NAME)
             .lastName(TEST_LAST_NAME)
             .email(TEST_USER_EMAIL)
+            .gender(gender)
+            .languagePreferenceWelsh(NO)
+            .address(AddressGlobalUK.builder()
+                .addressLine1("line 1")
+                .postTown("town")
+                .postCode("postcode")
+                .country("UK")
+                .build())
+            .build();
+    }
+
+    public static Applicant getApplicantWithAddress() {
+        return getApplicantWithAddress(MALE);
+    }
+
+    public static Applicant getApplicantWithNonConfidentialAddress() {
+        return Applicant.builder()
+            .firstName(TEST_FIRST_NAME)
+            .middleName(TEST_MIDDLE_NAME)
+            .lastName(TEST_LAST_NAME)
+            .nonConfidentialEmail(TEST_USER_EMAIL)
             .gender(MALE)
+            .languagePreferenceWelsh(NO)
+            .nonConfidentialAddress(AddressGlobalUK.builder()
+                .addressLine1("line 1")
+                .postTown("town")
+                .postCode("postcode")
+                .country("UK")
+                .build())
+            .build();
+    }
+
+    public static Applicant getApplicant2WithAddress(Gender gender) {
+        return Applicant.builder()
+            .firstName(TEST_APP2_FIRST_NAME)
+            .middleName(TEST_APP2_MIDDLE_NAME)
+            .lastName(TEST_APP2_LAST_NAME)
+            .email(TEST_APPLICANT_2_USER_EMAIL)
+            .gender(gender)
             .languagePreferenceWelsh(NO)
             .address(AddressGlobalUK.builder()
                 .addressLine1("line 1")
@@ -232,20 +321,7 @@ public class TestDataHelper {
     }
 
     public static Applicant getApplicant2WithAddress() {
-        return Applicant.builder()
-            .firstName(TEST_APP2_FIRST_NAME)
-            .middleName(TEST_APP2_MIDDLE_NAME)
-            .lastName(TEST_APP2_LAST_NAME)
-            .email(TEST_APPLICANT_2_USER_EMAIL)
-            .gender(FEMALE)
-            .languagePreferenceWelsh(NO)
-            .address(AddressGlobalUK.builder()
-                .addressLine1("line 1")
-                .postTown("town")
-                .postCode("postcode")
-                .country("UK")
-                .build())
-            .build();
+        return getApplicant2WithAddress(FEMALE);
     }
 
     public static Applicant getApplicant2(Gender gender) {
@@ -578,7 +654,7 @@ public class TestDataHelper {
     public static CaseData validCaseDataForAwaitingFinalOrder() {
         CaseData caseData = validCaseWithCourtHearing();
         LocalDateTime dateAndTimeOfHearing = caseData.getConditionalOrder().getDateAndTimeOfHearing();
-
+        caseData.getConditionalOrder().setGrantedDate(caseData.getConditionalOrder().getDecisionDate());
         FinalOrder finalOrder = caseData.getFinalOrder();
 
         finalOrder.setDateFinalOrderEligibleFrom(caseData.getFinalOrder().getDateFinalOrderEligibleFrom(dateAndTimeOfHearing));
@@ -821,7 +897,9 @@ public class TestDataHelper {
             SIGN_IN_DIVORCE_URL, SIGN_IN_DIVORCE_TEST_URL,
             SIGN_IN_DISSOLUTION_URL, SIGN_IN_DISSOLUTION_TEST_URL,
             APPLICANT_2_SIGN_IN_DIVORCE_URL, APPLICANT_2_SIGN_IN_DIVORCE_TEST_URL,
-            APPLICANT_2_SIGN_IN_DISSOLUTION_URL, APPLICANT_2_SIGN_IN_DISSOLUTION_TEST_URL
+            APPLICANT_2_SIGN_IN_DISSOLUTION_URL, APPLICANT_2_SIGN_IN_DISSOLUTION_TEST_URL,
+            RESPONDENT_SIGN_IN_DIVORCE_URL, RESPONDENT_SIGN_IN_DIVORCE_TEST_URL,
+            RESPONDENT_SIGN_IN_DISSOLUTION_URL, RESPONDENT_SIGN_IN_DISSOLUTION_TEST_URL
         );
     }
 
@@ -847,6 +925,36 @@ public class TestDataHelper {
         if (applicationType.equals(JOINT_APPLICATION)) {
             templateVars.put(JOINT_CONDITIONAL_ORDER, CommonContent.YES);
             templateVars.put(WIFE_JOINT, CommonContent.YES);
+        }
+        return templateVars;
+    }
+
+    public static Map<String, String> getRequestForInformationTemplateVars() {
+        Map<String, String> templateVars = getMainTemplateVars();
+        templateVars.put(IS_JOINT, CommonContent.NO);
+        templateVars.put(WIFE_JOINT, CommonContent.NO);
+        templateVars.put(HUSBAND_JOINT, CommonContent.NO);
+        templateVars.put(CIVIL_PARTNER_JOINT, CommonContent.NO);
+        templateVars.put(SENT_TO_BOTH_APPLICANTS, CommonContent.NO);
+
+        return templateVars;
+    }
+
+    public static Map<String, String> getRequestForInformationTemplateVars(ApplicationType applicationType,
+                                                                           RequestForInformationJointParties parties,
+                                                                           Boolean isDivorce,
+                                                                           Applicant partner) {
+        Map<String, String> templateVars = getRequestForInformationTemplateVars();
+
+        if (applicationType.equals(JOINT_APPLICATION) && parties.equals(BOTH)) {
+            templateVars.put(IS_JOINT, CommonContent.YES);
+            templateVars.put(SENT_TO_BOTH_APPLICANTS, CommonContent.YES);
+            if (isDivorce) {
+                templateVars.put(HUSBAND_JOINT, MALE.equals(partner.getGender()) ? CommonContent.YES : CommonContent.NO);
+                templateVars.put(WIFE_JOINT, FEMALE.equals(partner.getGender()) ? CommonContent.YES : CommonContent.NO);
+            } else {
+                templateVars.put(CIVIL_PARTNER_JOINT, CommonContent.YES);
+            }
         }
         return templateVars;
     }
@@ -928,9 +1036,74 @@ public class TestDataHelper {
         return templateVars;
     }
 
+    public static Map<String, Object> getBasicSolicitorTemplateContent(
+        CaseData data,
+        boolean isApplicantSolicitor,
+        LanguagePreference languagePreference
+    ) {
+        Map<String, Object> templateVars = getBasicDocmosisTemplateContent(languagePreference);
+        Applicant applicant1 = data.getApplicant1();
+        Applicant applicant2 = data.getApplicant2();
+        Solicitor applicant1Solicitor = applicant1.getSolicitor();
+        Solicitor applicant2Solicitor = applicant2.getSolicitor();
+        boolean isJoint = !data.getApplicationType().isSole();
+
+        templateVars.put(CASE_REFERENCE, formatId(TEST_CASE_ID));
+        templateVars.put(APPLICANT_1_FIRST_NAME, applicant1.getFirstName());
+        templateVars.put(APPLICANT_1_LAST_NAME, applicant1.getLastName());
+        templateVars.put(DocmosisTemplateConstants.APPLICANT_2_FIRST_NAME, applicant2.getFirstName());
+        templateVars.put(DocmosisTemplateConstants.APPLICANT_2_LAST_NAME, applicant2.getLastName());
+        templateVars.put(APPLICANT_OR_APPLICANT1, getApplicantOrApplicant1(data, languagePreference));
+        templateVars.put(RESPONDENT_OR_APPLICANT2, getRespondentOrApplicant2(data, languagePreference));
+        templateVars.put(CommonContent.IS_JOINT, isJoint);
+        templateVars.put(IS_DIVORCE, data.isDivorce());
+        templateVars.put(APPLICANT_1_SOLICITOR_NAME, solicitorName(applicant1, applicant1Solicitor, languagePreference));
+        templateVars.put(APPLICANT_2_SOLICITOR_NAME, solicitorName(applicant2, applicant2Solicitor, languagePreference));
+        templateVars.put(DocmosisTemplateConstants.SOLICITOR_NAME, isApplicantSolicitor
+            ? applicant1Solicitor.getName()
+            : applicant2Solicitor.getName());
+        templateVars.put(SOLICITOR_ADDRESS, isApplicantSolicitor ? applicant1Solicitor.getAddress() : applicant2Solicitor.getAddress());
+        templateVars.put(
+            SOLICITOR_REFERENCE,
+            isApplicantSolicitor
+                ? solicitorReference(applicant1Solicitor, languagePreference)
+                : solicitorReference(applicant2Solicitor, languagePreference)
+        );
+        return templateVars;
+    }
+
+    private static String solicitorName(Applicant applicant, Solicitor solicitor, LanguagePreference languagePreference) {
+        String notRepresented = WELSH.equals(languagePreference) ? NOT_REPRESENTED_CY : NOT_REPRESENTED;
+        return applicant.isRepresented() ? solicitor.getName() : notRepresented;
+    }
+
+    private static String solicitorReference(Solicitor solicitor, LanguagePreference languagePreference) {
+        String notProvided = WELSH.equals(languagePreference) ? NOT_PROVIDED_CY : NOT_PROVIDED;
+        return isNotEmpty(solicitor.getReference()) ? solicitor.getReference() : notProvided;
+    }
+
+    private static String getApplicantOrApplicant1(CaseData caseData, LanguagePreference languagePreference) {
+        final boolean isSole = caseData.getApplicationType().isSole();
+        if (WELSH.equals(languagePreference)) {
+            return isSole ? APPLICANT_CY : APPLICANT_1_CY;
+        } else {
+            return isSole ? DocmosisTemplateConstants.APPLICANT : APPLICANT_1;
+        }
+    }
+
+    private static String getRespondentOrApplicant2(CaseData caseData, LanguagePreference languagePreference) {
+        final boolean isSole = caseData.getApplicationType().isSole();
+        if (WELSH.equals(languagePreference)) {
+            return isSole ? RESPONDENT_CY : APPLICANT_2_CY;
+        } else {
+            return isSole ? RESPONDENT : APPLICANT_2;
+        }
+    }
+
     public static GeneralOrder getGeneralOrder(Document ccdDocument) {
         return GeneralOrder
             .builder()
+            .scannedGeneralOrderOrGeneratedGeneralOrder(GENERATED_GENERAL_ORDER)
             .generalOrderDate(LocalDate.of(2021, 1, 1))
             .generalOrderDetails("some details")
             .generalOrderDivorceParties(Set.of(GeneralOrderDivorceParties.RESPONDENT))
@@ -942,9 +1115,37 @@ public class TestDataHelper {
             .build();
     }
 
-    public static GeneralOrder getGeneralOrder() {
-        return getGeneralOrder(null);
+    public static GeneralOrder getGeneralOrder(ScannedDocument ccdDocument) {
+        return GeneralOrder
+            .builder()
+            .scannedGeneralOrderOrGeneratedGeneralOrder(SCANNED_GENERAL_ORDER)
+            .generalOrderDivorceParties(Set.of(GeneralOrderDivorceParties.RESPONDENT))
+            .generalOrderScannedDraft(ccdDocument)
+            .build();
     }
+
+    public static GeneralOrder getGeneralOrder() {
+        return getGeneralOrder((Document) null);
+    }
+
+    public static Document getGeneralOrderDocument() {
+        String documentUrl = "http://localhost:8080/1234";
+        return new Document(
+            documentUrl,
+            "scannedGeneralOrder2020-07-16 11:10:34.pdf",
+            documentUrl + "/binary"
+        );
+    }
+
+    public static ScannedDocument getScannedGeneralOrderDocument() {
+        return ScannedDocument.builder()
+            .scannedDate(LocalDateTime.now())
+            .fileName("scannedGeneralOrder2020-07-16 11:10:34.pdf")
+            .type(ScannedDocumentType.OTHER)
+            .url(getGeneralOrderDocument())
+            .build();
+    }
+
 
     public static ListValue<DivorceGeneralOrder> getDivorceGeneralOrderListValue(Document ccdDocument, String listValueId) {
         DivorceDocument generalOrderDocument = DivorceDocument
@@ -1133,11 +1334,13 @@ public class TestDataHelper {
     }
 
     public static List<ListValue<ScannedDocument>> scannedDocuments(List<String> scannedDocumentSubtypes) {
-        return scannedDocumentSubtypes
-            .stream()
-            .map(TestDataHelper::scannedDocuments)
-            .flatMap(java.util.Collection::stream)
-            .collect(Collectors.toList());
+        return new ArrayList<>(
+            scannedDocumentSubtypes
+                .stream()
+                .map(TestDataHelper::scannedDocuments)
+                .flatMap(java.util.Collection::stream)
+                .toList()
+        );
     }
 
     private static List<ListValue<ScannedDocument>> scannedDocuments(String subtype) {
@@ -1364,5 +1567,494 @@ public class TestDataHelper {
                 .documentsGenerated(Lists.newArrayList(coGrantedDoc, coCoverLetterApp1, coCoverLetterApp2))
                 .build())
             .build();
+    }
+
+    public static uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State> getRequestForInformationCaseDetails() {
+        CaseData caseData = getRequestForInformationBaseData(SOLE_APPLICATION, true, false);
+        caseData.getRequestForInformationList().getRequestForInformation().setRequestForInformationSoleParties(APPLICANT);
+        caseData.getRequestForInformationList().getRequestForInformation().setRequestForInformationDetails(TEST_TEXT);
+        setRequestForInformationBaseRequestValues(caseData);
+
+        return getRequestForInformationBaseDetails(caseData);
+    }
+
+    public static uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State> getRequestForInformationCaseDetails(
+        RequestForInformationSoleParties soleParties,
+        Boolean applicantRepresented,
+        Boolean applicant2Represented
+    ) {
+        CaseData caseData = getRequestForInformationBaseData(SOLE_APPLICATION, applicantRepresented, applicant2Represented);
+        caseData.getRequestForInformationList().getRequestForInformation().setRequestForInformationSoleParties(soleParties);
+        caseData.getRequestForInformationList().getRequestForInformation().setRequestForInformationDetails(TEST_TEXT);
+        setRequestForInformationBaseRequestValues(caseData);
+
+        return getRequestForInformationBaseDetails(caseData);
+    }
+
+    public static uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State> getRequestForInformationCaseDetails(
+                                                                                RequestForInformationJointParties jointParties,
+                                                                                Boolean applicantRepresented,
+                                                                                Boolean applicant2Represented
+    ) {
+        CaseData caseData = getRequestForInformationBaseData(JOINT_APPLICATION, applicantRepresented, applicant2Represented);
+        caseData.getRequestForInformationList().getRequestForInformation().setRequestForInformationJointParties(jointParties);
+        caseData.getRequestForInformationList().getRequestForInformation().setRequestForInformationDetails(TEST_TEXT);
+        setRequestForInformationBaseRequestValues(caseData);
+
+        return getRequestForInformationBaseDetails(caseData);
+    }
+
+    public static uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State> getRequestForInformationOtherCaseDetails(
+        ApplicationType applicationType,
+        Boolean applicantRepresented,
+        Boolean applicant2Represented
+    ) {
+        CaseData caseData = getRequestForInformationBaseData(applicationType, applicantRepresented, applicant2Represented);
+        if (SOLE_APPLICATION.equals(applicationType)) {
+            caseData.getRequestForInformationList().getRequestForInformation().setRequestForInformationSoleParties(
+                RequestForInformationSoleParties.OTHER
+            );
+        } else {
+            caseData.getRequestForInformationList().getRequestForInformation().setRequestForInformationJointParties(
+                RequestForInformationJointParties.OTHER
+            );
+        }
+        caseData.getRequestForInformationList().getRequestForInformation().setRequestForInformationName(TEST_OTHER_NAME);
+        caseData.getRequestForInformationList().getRequestForInformation().setRequestForInformationEmailAddress(TEST_OTHER_EMAIL);
+        caseData.getRequestForInformationList().getRequestForInformation().setRequestForInformationDetails(TEST_TEXT);
+        setRequestForInformationBaseRequestValues(caseData);
+
+        return getRequestForInformationBaseDetails(caseData);
+    }
+
+    public static uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State> getOfflineRequestForInformationCaseDetails(
+        RequestForInformationSoleParties soleParties,
+        Boolean applicantRepresented,
+        Boolean applicant2Represented
+    ) {
+        CaseData caseData = getOfflineRequestForInformationBaseData(SOLE_APPLICATION, applicantRepresented, applicant2Represented);
+        caseData.getRequestForInformationList().getRequestForInformation().setRequestForInformationSoleParties(soleParties);
+        caseData.getRequestForInformationList().getRequestForInformation().setRequestForInformationDetails(TEST_TEXT);
+        setRequestForInformationBaseRequestValues(caseData);
+
+        return getRequestForInformationBaseDetails(caseData);
+    }
+
+    public static uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State> getOfflineRequestForInformationCaseDetails(
+        RequestForInformationJointParties jointParties,
+        Boolean applicantRepresented,
+        Boolean applicant2Represented
+    ) {
+        CaseData caseData = getOfflineRequestForInformationBaseData(JOINT_APPLICATION, applicantRepresented, applicant2Represented);
+        caseData.getRequestForInformationList().getRequestForInformation().setRequestForInformationJointParties(jointParties);
+        caseData.getRequestForInformationList().getRequestForInformation().setRequestForInformationDetails(TEST_TEXT);
+        setRequestForInformationBaseRequestValues(caseData);
+
+        return getRequestForInformationBaseDetails(caseData);
+    }
+
+    public static CaseData getRequestForInformationBaseData(ApplicationType applicationType,
+                                                            Boolean applicantRepresented,
+                                                            Boolean applicant2Represented) {
+        final CaseData caseData = caseData();
+        caseData.setApplicationType(applicationType);
+        if (applicantRepresented) {
+            caseData.setApplicant1(applicantRepresentedBySolicitor());
+        }
+        if (applicant2Represented) {
+            caseData.setApplicant2(applicantRepresentedBySolicitor());
+            caseData.getApplicant2().setGender(MALE);
+        } else {
+            caseData.setApplicant2(getApplicant(MALE));
+        }
+
+        return caseData;
+    }
+
+    public static CaseData getOfflineRequestForInformationBaseData(ApplicationType applicationType,
+                                                            Boolean applicantRepresented,
+                                                            Boolean applicant2Represented) {
+        final CaseData caseData = caseData();
+        caseData.setApplicationType(applicationType);
+        caseData.setApplicant1(getApplicantWithAddress(FEMALE));
+        caseData.getApplicant1().setOffline(YES);
+        caseData.setApplicant2(getApplicant2WithAddress(MALE));
+        caseData.getApplicant2().setOffline(YES);
+        if (applicantRepresented) {
+            caseData.getApplicant1().setSolicitorRepresented(YES);
+            caseData.getApplicant1().setSolicitor(getOfflineSolicitor());
+        }
+        if (applicant2Represented) {
+            caseData.getApplicant2().setSolicitorRepresented(YES);
+            caseData.getApplicant2().setSolicitor(getOfflineSolicitor());
+        }
+
+        return caseData;
+    }
+
+    public static void setRequestForInformationBaseRequestValues(CaseData caseData) {
+        caseData.getRequestForInformationList().getRequestForInformation().setValues(caseData);
+        caseData.getRequestForInformationList().addRequestToList(caseData.getRequestForInformationList().getRequestForInformation());
+    }
+
+    public static uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State> getRequestForInformationBaseDetails(CaseData caseData) {
+        final uk.gov.hmcts.ccd.sdk.api.CaseDetails<CaseData, State> details = new uk.gov.hmcts.ccd.sdk.api.CaseDetails<>();
+        details.setData(caseData);
+        details.setState(InformationRequested);
+        details.setId(TEST_CASE_ID);
+
+        return details;
+    }
+
+    public static boolean isApplicant2(CaseData caseData, Applicant applicant) {
+        return caseData.getApplicant2().equals(applicant);
+    }
+
+    public static RequestForInformationResponseDraft getRequestForInformationResponseDraft(CaseData caseData, Applicant applicant) {
+        RequestForInformationResponseDraft draft;
+        if (isApplicant2(caseData, applicant)) {
+            draft = applicant.isRepresented()
+                ? caseData.getRequestForInformationList().getRequestForInformationResponseApplicant2Solicitor()
+                : caseData.getRequestForInformationList().getRequestForInformationResponseApplicant2();
+        } else {
+            draft = applicant.isRepresented()
+                ? caseData.getRequestForInformationList().getRequestForInformationResponseApplicant1Solicitor()
+                : caseData.getRequestForInformationList().getRequestForInformationResponseApplicant1();
+        }
+
+        return draft;
+    }
+
+    public static void addDocumentToRequestForInformationResponseDraft(RequestForInformationResponseDraft draft) {
+        final DivorceDocument uploadedDocument = documentWithType(null).getValue();
+        draft.addDocument(uploadedDocument);
+    }
+
+    public static void addDocumentToRequestForInformationResponseDraft(RequestForInformationResponseDraft draft, DivorceDocument doc) {
+        draft.addDocument(doc);
+    }
+
+    public static void addDocumentToRequestForInformationOfflineResponseDraft(RequestForInformationOfflineResponseDraft draft) {
+        final DivorceDocument uploadedDocument = documentWithType(REQUEST_FOR_INFORMATION_RESPONSE_DOC).getValue();
+        draft.addDocument(uploadedDocument);
+    }
+
+    public static void addDocumentToRequestForInformationOfflineResponseDraft(
+        RequestForInformationOfflineResponseDraft draft,
+        DivorceDocument doc
+    ) {
+        draft.addDocument(doc);
+    }
+
+    private static void clearDraft(RequestForInformationList requestForInformationList, boolean isApplicant2, boolean isRepresented) {
+        if (isApplicant2) {
+            if (isRepresented) {
+                requestForInformationList.setRequestForInformationResponseApplicant2Solicitor(new RequestForInformationResponseDraft());
+            } else {
+                requestForInformationList.setRequestForInformationResponseApplicant2(new RequestForInformationResponseDraft());
+            }
+        } else {
+            if (isRepresented) {
+                requestForInformationList.setRequestForInformationResponseApplicant1Solicitor(new RequestForInformationResponseDraft());
+            } else {
+                requestForInformationList.setRequestForInformationResponseApplicant1(new RequestForInformationResponseDraft());
+            }
+        }
+    }
+
+    private static RequestForInformationResponseParties getResponseParty(boolean isApplicant2, boolean isRepresented) {
+        if (isApplicant2) {
+            return isRepresented ? APPLICANT2SOLICITOR : APPLICANT2;
+        } else {
+            return isRepresented ? APPLICANT1SOLICITOR : APPLICANT1;
+        }
+    }
+
+    public static void buildOfflineDraft(CaseData caseData, RequestForInformationOfflineResponseSoleParties soleParty,
+                                         boolean addDetails, boolean addDocument, boolean setAllDocsUploaded, boolean sendNotifications) {
+        caseData.getRequestForInformationList().getRequestForInformationOfflineResponseDraft().setRfiOfflineSoleResponseParties(soleParty);
+        buildOfflineDraft(caseData, addDetails, addDocument, setAllDocsUploaded, sendNotifications);
+    }
+
+    public static void buildOfflineDraft(CaseData caseData, RequestForInformationOfflineResponseSoleParties soleParty,
+                                         boolean addDetails, DivorceDocument doc, boolean setAllDocsUploaded, boolean sendNotifications) {
+        caseData.getRequestForInformationList().getRequestForInformationOfflineResponseDraft().setRfiOfflineSoleResponseParties(soleParty);
+        buildOfflineDraft(caseData, addDetails, doc, setAllDocsUploaded, sendNotifications);
+    }
+
+    public static void buildOfflineDraft(CaseData caseData, RequestForInformationOfflineResponseJointParties jointParty,
+                                         boolean addDetails, boolean addDocument, boolean setAllDocsUploaded, boolean sendNotifications) {
+        caseData.getRequestForInformationList().getRequestForInformationOfflineResponseDraft().setRfiOfflineJointResponseParties(
+            jointParty
+        );
+        buildOfflineDraft(caseData, addDetails, addDocument, setAllDocsUploaded, sendNotifications);
+    }
+
+    public static void buildOfflineDraft(CaseData caseData, RequestForInformationOfflineResponseJointParties jointParty,
+                                         boolean addDetails, DivorceDocument doc, boolean setAllDocsUploaded, boolean sendNotifications) {
+        caseData.getRequestForInformationList().getRequestForInformationOfflineResponseDraft().setRfiOfflineJointResponseParties(
+            jointParty
+        );
+        buildOfflineDraft(caseData, addDetails, doc, setAllDocsUploaded, sendNotifications);
+    }
+
+    public static void buildOfflineDraft(CaseData caseData,
+                                         boolean addDetails,
+                                         boolean addDocument,
+                                         boolean setAllDocsUploaded,
+                                         boolean sendNotifications
+    ) {
+        RequestForInformationOfflineResponseDraft draft =
+            caseData.getRequestForInformationList().getRequestForInformationOfflineResponseDraft();
+        if (addDetails) {
+            draft.setRfiOfflineDraftResponseDetails(TEST_TEXT);
+        }
+        if (addDocument) {
+            addDocumentToRequestForInformationOfflineResponseDraft(draft);
+        }
+        if (setAllDocsUploaded) {
+            draft.setRfiOfflineAllDocumentsUploaded(YES);
+        } else {
+            draft.setRfiOfflineAllDocumentsUploaded(NO);
+        }
+        if (sendNotifications) {
+            draft.setRfiOfflineResponseSendNotifications(YES);
+        } else {
+            draft.setRfiOfflineResponseSendNotifications(NO);
+        }
+    }
+
+    public static void buildOfflineDraft(CaseData caseData,
+                                         boolean addDetails,
+                                         DivorceDocument document,
+                                         boolean setAllDocsUploaded,
+                                         boolean sendNotifications
+    ) {
+        RequestForInformationOfflineResponseDraft draft =
+            caseData.getRequestForInformationList().getRequestForInformationOfflineResponseDraft();
+        if (addDetails) {
+            draft.setRfiOfflineDraftResponseDetails(TEST_TEXT);
+        }
+        if (setAllDocsUploaded) {
+            draft.setRfiOfflineAllDocumentsUploaded(YES);
+        } else {
+            draft.setRfiOfflineAllDocumentsUploaded(NO);
+        }
+        if (sendNotifications) {
+            draft.setRfiOfflineResponseSendNotifications(YES);
+        } else {
+            draft.setRfiOfflineResponseSendNotifications(NO);
+        }
+        addDocumentToRequestForInformationOfflineResponseDraft(draft, document);
+    }
+
+    public static void buildDraft(CaseData caseData,
+                                  Applicant applicant,
+                                  boolean addDetails,
+                                  boolean addDocument,
+                                  boolean setCannotUpload
+    ) {
+        RequestForInformationResponseDraft draft = getRequestForInformationResponseDraft(caseData, applicant);
+        if (addDetails) {
+            draft.setRfiDraftResponseDetails(TEST_TEXT);
+        }
+        if (addDocument) {
+            addDocumentToRequestForInformationResponseDraft(draft);
+        }
+        if (setCannotUpload) {
+            draft.setRfiDraftResponseCannotUploadDocs(YES);
+        }
+    }
+
+    public static void buildDraft(CaseData caseData,
+                                  Applicant applicant,
+                                  boolean addDetails,
+                                  DivorceDocument doc,
+                                  boolean setCannotUpload
+    ) {
+        RequestForInformationResponseDraft draft = getRequestForInformationResponseDraft(caseData, applicant);
+        if (addDetails) {
+            draft.setRfiDraftResponseDetails(TEST_TEXT);
+        }
+        if (setCannotUpload) {
+            draft.setRfiDraftResponseCannotUploadDocs(YES);
+        }
+        addDocumentToRequestForInformationResponseDraft(draft, doc);
+    }
+
+    public static void addResponseToLatestRequestForInformation(CaseData caseData, Applicant applicant) {
+        final boolean isApplicant2 = isApplicant2(caseData, applicant);
+        final RequestForInformationList requestForInformationList = caseData.getRequestForInformationList();
+        final RequestForInformationResponse requestForInformationResponse = new RequestForInformationResponse();
+        buildDraft(caseData, applicant, true, true, false);
+
+        requestForInformationResponse.setValues(caseData, getResponseParty(isApplicant2, applicant.isRepresented()));
+
+        requestForInformationList.getLatestRequest().addResponseToList(requestForInformationResponse);
+
+        clearDraft(requestForInformationList, isApplicant2, applicant.isRepresented());
+    }
+
+    public static void addResponseToLatestRequestForInformation(CaseData caseData, Applicant applicant, DivorceDocument doc) {
+        final boolean isApplicant2 = isApplicant2(caseData, applicant);
+        final RequestForInformationList requestForInformationList = caseData.getRequestForInformationList();
+        final RequestForInformationResponse requestForInformationResponse = new RequestForInformationResponse();
+        buildDraft(caseData, applicant, true, doc, false);
+
+        requestForInformationResponse.setValues(caseData, getResponseParty(isApplicant2, applicant.isRepresented()));
+
+        requestForInformationList.getLatestRequest().addResponseToList(requestForInformationResponse);
+
+        clearDraft(requestForInformationList, isApplicant2, applicant.isRepresented());
+    }
+
+    public static void addCannotUploadResponseToLatestRequestForInformation(CaseData caseData, Applicant applicant) {
+        final boolean isApplicant2 = isApplicant2(caseData, applicant);
+        final RequestForInformationList requestForInformationList = caseData.getRequestForInformationList();
+        final RequestForInformationResponse requestForInformationResponse = new RequestForInformationResponse();
+        buildDraft(caseData, applicant, true, false, true);
+
+        requestForInformationResponse.setValues(caseData, getResponseParty(isApplicant2, applicant.isRepresented()));
+
+        requestForInformationList.getLatestRequest().addResponseToList(requestForInformationResponse);
+
+        clearDraft(requestForInformationList, isApplicant2, applicant.isRepresented());
+    }
+
+    public static void addNotAllDocsUploadedOfflineResponseToLatestRequestForInformation(CaseData caseData,
+                                                                       RequestForInformationOfflineResponseSoleParties soleParty) {
+        buildOfflineDraft(caseData, soleParty, true, true, false, false);
+        addOfflineResponseToLatestRequestForInformation(caseData);
+    }
+
+    public static void addNotAllDocsUploadedOfflineResponseToLatestRequestForInformation(CaseData caseData,
+                                                                       RequestForInformationOfflineResponseJointParties jointParty) {
+        buildOfflineDraft(caseData, jointParty, true, true, false, false);
+        addOfflineResponseToLatestRequestForInformation(caseData);
+    }
+
+    public static void addOfflineResponseToLatestRequestForInformation(CaseData caseData,
+                                                                       RequestForInformationOfflineResponseSoleParties soleParty) {
+        buildOfflineDraft(caseData, soleParty, true, true, true, false);
+        addOfflineResponseToLatestRequestForInformation(caseData);
+    }
+
+    public static void addOfflineResponseToLatestRequestForInformation(CaseData caseData,
+                                                                       RequestForInformationOfflineResponseJointParties jointParty) {
+        buildOfflineDraft(caseData, jointParty, true, true, true, false);
+        addOfflineResponseToLatestRequestForInformation(caseData);
+    }
+
+    public static void addOfflineResponseToLatestRequestForInformation(CaseData caseData,
+                                                                       RequestForInformationOfflineResponseSoleParties soleParty,
+                                                                       DivorceDocument doc) {
+        buildOfflineDraft(caseData, soleParty, true, doc, true, false);
+        addOfflineResponseToLatestRequestForInformation(caseData);
+    }
+
+    public static void addOfflineResponseToLatestRequestForInformation(CaseData caseData,
+                                                                       RequestForInformationOfflineResponseJointParties jointParty,
+                                                                       DivorceDocument doc) {
+        buildOfflineDraft(caseData, jointParty, true, doc, true, false);
+        addOfflineResponseToLatestRequestForInformation(caseData);
+    }
+
+    private static void addOfflineResponseToLatestRequestForInformation(CaseData caseData) {
+        final RequestForInformationList requestForInformationList = caseData.getRequestForInformationList();
+        final RequestForInformationResponse requestForInformationResponse = new RequestForInformationResponse();
+
+        requestForInformationResponse.setValues(
+            caseData,
+            caseData.getRequestForInformationList().getRequestForInformationOfflineResponseDraft()
+        );
+
+        requestForInformationList.getLatestRequest().addResponseToList(requestForInformationResponse);
+
+        caseData.getRequestForInformationList().setRequestForInformationOfflineResponseDraft(
+            new RequestForInformationOfflineResponseDraft()
+        );
+    }
+
+    public static void setSendNotificationFlagOnLatestOfflineResponse(CaseData caseData, boolean sendNotifications) {
+        caseData.getRequestForInformationList().getLatestRequest().getLatestResponse().setRfiOfflineResponseNotificationsRequested(
+            YesOrNo.from(sendNotifications)
+        );
+    }
+
+    public static void addRfiResponseDocumentToCaseData(CaseData caseData, Clock clock) {
+        setMockClock(clock);
+
+        final Document document = Document.builder()
+            .url("/filename")
+            .binaryUrl("/filename/binary")
+            .filename("filename")
+            .build();
+        final ListValue<ScannedDocument> scannedRfirDocument = ListValue
+            .<ScannedDocument>builder()
+            .id(OTHER.getLabel())
+            .value(
+                ScannedDocument.builder()
+                    .scannedDate(now(clock))
+                    .fileName("RFIR.pdf")
+                    .type(ScannedDocumentType.OTHER)
+                    .url(document)
+                    .build()
+            )
+            .build();
+        final List<ListValue<ScannedDocument>> scannedDocs = new ArrayList<>();
+        scannedDocs.add(scannedRfirDocument);
+
+        caseData.setDocuments(
+            CaseDocuments.builder()
+                .typeOfDocumentAttached(RFI_RESPONSE)
+                .scannedDocuments(scannedDocs)
+                .scannedDocumentNames(
+                    DynamicList
+                        .builder()
+                        .value(
+                            DynamicListElement
+                                .builder()
+                                .label("RFIR.pdf")
+                                .build()
+                        )
+                        .build()
+                )
+                .build()
+        );
+    }
+
+    public static void addScannedDocument(CaseData caseData, ScannedDocument scannedDocument) {
+        List<ListValue<ScannedDocument>> scannedDocuments = caseData.getDocuments().getScannedDocuments();
+        if (scannedDocuments == null) {
+            scannedDocuments = new ArrayList<>();
+        }
+        final ListValue<ScannedDocument> listValue = new ListValue<>();
+        listValue.setValue(scannedDocument);
+        scannedDocuments.add(listValue);
+        caseData.getDocuments().setScannedDocuments(scannedDocuments);
+    }
+
+    public static void setScannedDocumentNames(CaseData caseData) {
+        List<DynamicListElement> scannedDocumentNames =
+            emptyIfNull(caseData.getDocuments().getScannedDocuments())
+                .stream()
+                .map(scannedDocListValue ->
+                    DynamicListElement
+                        .builder()
+                        .label(scannedDocListValue.getValue().getFileName())
+                        .code(UUID.randomUUID()).build()
+                ).toList();
+
+        DynamicList scannedDocNamesDynamicList = DynamicList
+            .builder()
+            .listItems(scannedDocumentNames)
+            .build();
+
+        caseData.getDocuments().setScannedDocumentNames(scannedDocNamesDynamicList);
+    }
+
+    public static void setSelectedScannedDocument(CaseData caseData, Integer documentIndex) {
+        final DynamicListElement selectedDocument = caseData.getDocuments().getScannedDocumentNames().getListItems().get(documentIndex);
+        caseData.getDocuments().getScannedDocumentNames().setValue(selectedDocument);
     }
 }
